--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <html lang="en">
 <head>
 <!-- Link your CSS stylesheet -->
-  <script src="index.css"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css"></link>
 </head>
 <body>
-  <nav class="highnav">
+  <nav class="highbar">
     <a href="#">Plan your Visit</a>
-    <a href="#">Learn about the Park</a>
-    <a href="#">Get Involved</a>
+    <a href="#" class="learn">Learn About the Park</a>
+    <a href="#" class="involve">Get Involved</a>
   </nav>
   <header>
-    <img src="header_img.jpg" alt="Yosemite">
+    <img src="assets/header_img.jpg" alt="Yosemite">
     <h1>Yosemite Park Guide</h1>
     <div class="headerText">
       <p>Come explore California's beautiful wilderness.</p>
-      <p>Always open. Reservations are not available or required to enter the park.</p>
+      <p class="reserves">Always open. Reservations are not available or required to enter the park.</p>
     </div>
   </header>
   <section class="informational">
     <p>Not just a great valley, but a shrine to human foresight, the strength of granite,
       the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
-    <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, 
+    <p class="twomain">First protected in 1864, Yosemite National Park is best known for its waterfalls, 
       but within its nearly 1,200 square miles, you can find deep valleys,
       grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   </section>
@@ -30,20 +32,20 @@
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="Camp fire">
     <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it 
       interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. 
-      Check for current fire restrictions.</p>
+      Check for <b>current fire restrictions.</b></p>
   </section>
   <section class="camper">
     <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="RV">
     <p>We strongly recommend that you make reservations for lodging, camping, and backpacking.
-      You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+      You can pay the <b>park entrance fee</b> upon arrival (there's no need to pay it in advance).</p>
   </section>
-  <footer>
-    <img src="footer_img.png" alt="Yosemite Landscape">
-  </footer>
-  <nav class="lownav">
+  <div class="footy">
+    <img src="assets/footer_img.jpg" alt="Yosemite Landscape">
+  </div>
+  <nav class="lowbar">
     <a href="#">Plan your Visit</a>
-    <a href="#">Learn about the Park</a>
-    <a href="#">Get Involved</a>
+    <a href="#" class="learn">Learn about the Park</a>
+    <a href="#" class="involve">Get Involved</a>
   </nav>
       
 </body>
